# File generated automatically. Build with cmake . at the root directory
PROJECT(ALL_EXAMPLES)


add_subdirectory(db)
add_subdirectory(times)
add_subdirectory(SocketsTest)
add_subdirectory(directoryExplorer)
add_subdirectory(exceptionDemo)
add_subdirectory(http_tests)
add_subdirectory(critSectionDeadLock)
add_subdirectory(threadsTest)
add_subdirectory(fileSystemWatcher)
add_subdirectory(geometry3D)
add_subdirectory(poses)
add_subdirectory(se3)
add_subdirectory(type_name)
add_subdirectory(display3D)
add_subdirectory(display3D_custom_render)
add_subdirectory(opengl_objects_demo)
add_subdirectory(fbo_render_test)
add_subdirectory(offscreen-render)
add_subdirectory(octree_render_huge_pointcloud)
add_subdirectory(imageBasics)
add_subdirectory(imageCorrelation)
add_subdirectory(random)
add_subdirectory(imageConvolutionFFT)
add_subdirectory(imageFFT)
add_subdirectory(matrix)
add_subdirectory(displayPlots)
add_subdirectory(textFonts)
add_subdirectory(optimize-lm)
add_subdirectory(kmeans)
add_subdirectory(slerp_demo)
add_subdirectory(texture_sizes_test)
add_subdirectory(bayesianTracking)
add_subdirectory(icp)
add_subdirectory(rejectionSampling)
add_subdirectory(stringList)
add_subdirectory(RangeOnlyLocalization_RejectionSampling)
add_subdirectory(benchmark-gridmaps)
add_subdirectory(gridMapLikelihoodCharacterization)
add_subdirectory(pathPlanning)
add_subdirectory(gridRawlogSimulator)
add_subdirectory(gauss_img_filtering)
add_subdirectory(test-compress)
add_subdirectory(spline_interpolation)
add_subdirectory(gravity3d)
add_subdirectory(resampling-test)
add_subdirectory(feature_extraction)
add_subdirectory(gps-coordinates)
add_subdirectory(sog-merge)
add_subdirectory(laserProjectionInImages)
add_subdirectory(leastSquares)
add_subdirectory(rayTrace)
add_subdirectory(icp3D)
add_subdirectory(ransac-demo-plane3D)
add_subdirectory(ransac-demo-applications)
add_subdirectory(model_search_test)
add_subdirectory(createVideoFile)
add_subdirectory(polyhedronIntersection)
add_subdirectory(observer_pattern)
add_subdirectory(smart_pointers_test)
add_subdirectory(stl_containers_serialize)
add_subdirectory(polygonSplit)
add_subdirectory(setOfTexturedTrianglesTest)
add_subdirectory(gui_windows_events)
add_subdirectory(quaternions)
add_subdirectory(unscented_transform_test)
add_subdirectory(grab3Dvideo)
add_subdirectory(coordinate_conversions)
add_subdirectory(params-by-name)
add_subdirectory(checkerboardDetectors)
add_subdirectory(multipleCheckerboards)
add_subdirectory(voronoi_test)
add_subdirectory(keypoint_matching)
add_subdirectory(rgbd_dataset2rawlog)
add_subdirectory(a_starAlgorithm)
add_subdirectory(dijkstra-example)
add_subdirectory(graph_slam_demo)
add_subdirectory(bundle_adj_full_demo)
add_subdirectory(opengl_video_demo)
add_subdirectory(opengl_video_viewport_demo)
add_subdirectory(swissranger_cam_demo)
add_subdirectory(GPS_test)
add_subdirectory(sonar_SRF10_test)
add_subdirectory(eNoses_test)
add_subdirectory(SerialPort_test)
add_subdirectory(FTDI_USB_enumerate_test)
add_subdirectory(SICK_laser_test)
add_subdirectory(HOKUYO_laser_test)
add_subdirectory(joystick)
add_subdirectory(pioneerRobotDemo)
add_subdirectory(ptuDPerception)
add_subdirectory(ptuHokuyo)
add_subdirectory(tuMicos)
add_subdirectory(captureVideoFFmpeg)
add_subdirectory(SICK_laser_serial_test)
add_subdirectory(ntrip-client)
add_subdirectory(SICK_lms100eth_test)
add_subdirectory(eNeck_test)
add_subdirectory(cameraCaptureAskDialog)
add_subdirectory(eNosesRealtime_test)
add_subdirectory(IRBoard_test)
add_subdirectory(captureVideoOpenCV)
add_subdirectory(captureVideoDC1394)
add_subdirectory(enumerateCameras1394)
add_subdirectory(phidgetProximitySensor)
add_subdirectory(kinect_online_offline_demo)
add_subdirectory(captureVideoAndBuildPyr)
add_subdirectory(face_detection)

